# DevS69-sdetkit

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  ADAPTIVE_INVESTIGATION_ROADMAP.md  ARCHITECTURE.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.problem  Dockerfile.runtime  ENTERPRISE_OFFERINGS.md  LICENSE  MANIFEST.in  Makefile  QUALITY_PLAYBOOK.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  WORKFLOW.md  ci.sh  constraints-ci.txt  formatter-policy-proposal-chain-diagnostic.txt  formatter-policy-proposal-diagnostic.txt  index.md  mkdocs.yml  premium-gate.sh  pyproject.toml  quality.sh  requirements-docs.txt  requirements-test.txt  requirements.txt  sdet_check.json  security.sh
.docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICK_REFERENCE.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_SUMMARY.md  REPOSITORY_STRUCTURE.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  pip-audit-baseline.json
.sdetkit/: benchmark-control-baseline.json  premium-remediation-scripts.json
config/: adaptive_remediation_policy.default.json  dependency_slo_policy.json  first_proof_owner_escalation_profiles.json  first_proof_readiness_profiles.json  first_proof_threshold_profiles.json  impact_policy.json  mutmut_config.py  phase4_drift_scoring.json  portfolio_adapters.json  portfolio_policy.default.json  portfolio_policy.packs.json
docs/: -10-ultra-upgrade-report.md  .automation-ping-pr-2006  README.md  adaptive-dashboard.md  adaptive-demo-gallery.md  adaptive-diagnosis.md  adaptive-enterprise-analytics.md  adaptive-hosted-readiness-boundary.md  adaptive-integration-adapters.md  adaptive-learning-import.md  adaptive-memory.md  adaptive-product-proof-gallery.md  adaptive-remediation-policy.md  adaptive-review.md  adoption-examples.md  adoption-product-kpi-evidence.md  adoption-product-kpi-first-baseline.md  adoption-proof-examples.md  adoption-scorecard.md  adoption-walkthrough-enterprise.md  adoption-walkthrough-small-team.md  adoption.md  agentos-cookbook.md  agentos-foundation.md  api.md  archive-navigation-policy.md  artifact-contract-index.json  artifact-reference.md  automation-bots.md  automation-templates-engine.md  before-after-evidence-example.md  benchmark-control-regression-gate.md  benchmark-control-scorecard.md  big-upgrade-report-35.md  big-upgrade-report-36.md  big-upgrade-report-37.md  big-upgrade-report-38.md  big-upgrade-report-39.md  big-upgrade-report-40.md  big-upgrade-report-41.md  (+577 more)
plans/: community-touchpoint-plan.json  continuous-upgrade-cycle4-plan.json  continuous-upgrade-plan-1.json  continuous-upgrade-plan-10.json  continuous-upgrade-plan-11.json  continuous-upgrade-plan-2.json  continuous-upgrade-plan-3.json  continuous-upgrade-plan-4.json  continuous-upgrade-plan-5.json  continuous-upgrade-plan-6.json  continuous-upgrade-plan-7.json  continuous-upgrade-plan-8.json  continuous-upgrade-plan-9.json  contributor-recognition-plan.json  day91-continuous-upgrade-plan.json  distribution-scaling-plan.json  ecosystem-priorities-plan.json  enterprise-reliability-execution-tracker.json  escalation-quality-case-study.json  evidence-narrative-plan.json  governance-handoff-plan.json  governance-priorities-plan.json  governance-scale-plan.json  growth-campaign-plan.json  integration-feedback-plan.json  launch-readiness-plan.json  partner-outreach-plan.json  phase3-wrap-publication-plan.json  publication-quality-case-study.json  release-prioritization-plan.json  reliability-case-study.json  scale-upgrade-plan.json  strategic-execution-model-2026.json  top-tier-repo-execution-plan-2026-q2.json  triage-speed-case-study.json  trust-assets-refresh-plan.json  trust-faq-expansion-plan.json
schemas/: adaptive-remediation-policy.schema.json  adaptive-scenario-pack.schema.json  portfolio-batch.schema.json  repo-graph.schema.json
scripts/: adaptive_postcheck.py  adoption_scorecard.py  append_followup_changelog.py  apply_formatter_observation_matrix_alignment.py  apply_formatter_observation_navigation.py  apply_formatter_observation_operator_delta.py  apply_formatter_observation_portfolio_alignment.py  apply_formatter_observation_roadmap_delta.py  baseline_blocker_register.py  baseline_build_ops_snapshot.py  baseline_completion_and_prune_plan.py  baseline_completion_dashboard.py  baseline_completion_gate.py  baseline_control_loop_report.py  (+539 more)
tests/fixtures/adoption_repos/cpp_operator_proof/: .clang-tidy  CMakeLists.txt  CMakePresets.json
tests/fixtures/adoption_repos/cpp_operator_proof/.github/workflows/: native.yml
tests/fixtures/adoption_repos/cpp_operator_proof/scripts/: quality.sh
tests/fixtures/adoption_repos/cpp_operator_proof/src/: calculator.cpp
tests/fixtures/adoption_repos/cpp_operator_proof/tests/: calculator_test.cpp
(+3453 files in other folders)
